dataset1235/2025-2/805158916/users/2200760145/executions/2118643220_1720053066.log
== SUBMISSION (2025-09-01 15:47:38)
-- CODE: 
float(input())
peso = ()kg
quantidade = ()kg
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8000.3333
20.11
---- correct output:
7879.6733
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1962.55
15.11
---- correct output:
1871.89
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
2688.88
18.68
---- correct output:
2576.8
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
879.6733
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2697.2
31.82
---- correct output:
2506.28
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1338.40
14.10
---- correct output:
1253.8
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:47:24)
-- CODE: 
float(input)
peso = ()kg
quantidade = ()kg
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8000.3333
20.11
---- correct output:
7879.6733
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1962.55
15.11
---- correct output:
1871.89
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
2688.88
18.68
---- correct output:
2576.8
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
879.6733
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2697.2
31.82
---- correct output:
2506.28
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1338.40
14.10
---- correct output:
1253.8
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 17:14:53)
-- CODE: 
float(input())
peso = ()kg
quantidade = ()kg
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8000.3333
20.11
---- correct output:
7879.6733
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1962.55
15.11
---- correct output:
1871.89
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
2688.88
18.68
---- correct output:
2576.8
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
879.6733
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2697.2
31.82
---- correct output:
2506.28
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1338.40
14.10
---- correct output:
1253.8
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 17:14:54)
-- CODE: 
float(input())
peso = ()kg
quantidade = ()kg
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8000.3333
20.11
---- correct output:
7879.6733
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1962.55
15.11
---- correct output:
1871.89
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
2688.88
18.68
---- correct output:
2576.8
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
879.6733
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2697.2
31.82
---- correct output:
2506.28
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1338.40
14.10
---- correct output:
1253.8
-- ERROR:
File "XXXX", line 2
    peso = ()kg
             ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
